test/loop/confidence/errors/verify_error_7.loop
# Dupe functions

fail ->
  []

fail(thing) =>
  /stuff/  : thing


main ->
  true
